unit test on controller